add Application routes (CRUD). Add App tests and swagger
